--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-material-design": "^0.5.10",
     "electron": "^1.6.11",
+    "electron-packager": "^8.7.2",
     "jquery": "^3.2.1"
   }
 }
