--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-material-design": "^0.5.10",
     "electron": "^1.6.11",
     "electron-packager": "^8.7.2",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "socket.io": "^2.0.3"
   }
 }
