--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-packager": "^8.7.2",
     "express": "^4.15.3",
     "jquery": "^3.2.1",
+    "jquery-confirm": "^3.2.3",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   }
