--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.3",
     "jquery": "^3.2.1",
     "jquery-confirm": "^3.2.3",
+    "rasterizehtml": "^1.2.4",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   }
