--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "electron-packager . AlphaRed7-GUI --platform=darwin,linux,win32 --arch=all --out=dist/ --overwrite --ignore=./node_modules/* --ignore=./dist"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,9 @@
     "rasterizehtml": "^1.2.4",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
+  },
+  "devDependencies": {
+    "electron-builder": "^19.12.0",
+    "electron-packager": "^8.7.2"
   }
 }
