--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
     "type": "git",
     "url": "https://git.zrt.io:3000/AlphaRed7/GUI.git"
   },
-  "author": "",
+  "author": "zrt, Chenyao2333",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bootstrap-material-design": "^0.5.10",
-    "electron": "^1.6.11",
-    "electron-packager": "^8.7.2",
     "express": "^4.15.3",
     "jquery": "^3.2.1",
     "jquery-confirm": "^3.2.3",
@@ -27,6 +25,7 @@
     "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
+    "electron": "^1.6.11",
     "electron-builder": "^19.12.0",
     "electron-packager": "^8.7.2"
   }
